--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,12 @@ jobs:
     
     steps: 
     - uses: actions/checkout@v4
+      if: always()
     - name: Staring Node.js ${{ matrix.node-version }}
       if: always()
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
-          node-version: ${{ matrix.node-version }}
+        node-version: ${{ matrix.node-version }}
     - name: install modules
       run: npm install
     - name: build project
