add Timeline component, add LifeVisJs module

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install
     - name: build project
       if: always()
-      run: npm run build -- --base=/life_vizualization_schedule/
+      run: npm run build
     - name: linting
       if: always()
       run: npm run lint
