--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "konva": "^10.0.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-konva": "^19.2.1"
+    "react-konva": "^19.2.1",
+    "react-router-dom": "^7.10.1",
+    "vis-data": "^8.0.3",
+    "vis-network": "^10.0.2",
+    "vis-timeline": "^8.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/vis": "^4.21.27",
     "@vitejs/plugin-react": "^5.1.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
